# g2p

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
g2gen/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
g2gen/src/: lib.rs
g2gen/tests/: inv_table.txt  mul_table.txt
g2p/: Cargo.toml
g2p/benches/: g2_8_bench.rs
g2p/src/: lib.rs
g2p/tests/: impls.rs  rijndael.rs  test_doc_examples.rs  test_precomputed_tables.rs  test_trait_impl.rs
g2poly/: Cargo.toml  README.md
g2poly/src/: lib.rs
src/: lib.rs
tests/: impls.rs  rijndael.rs  test_doc_examples.rs  test_gf131072.rs  test_gf65536.rs  test_precomputed_tables.rs  test_trait_impl.rs
