[package]
name = "g2p"
version = "0.1.2-pre"
authors = ["WanzenBug <moritz9422@gmail.com>"]
edition = "2018"
readme = "./README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/WanzenBug/g2p"
documentation = "https://docs.rs/g2p"
description = """
A macro to create types that implement fast finite field arithmetic.
"""
categories = [ "no-std", "cryptography", "algorithms" ]
keywords = [ "finite-field", "galois", "macro", "newtype"]

[lib]
proc-macro = true

[dev-dependencies]
static_assertions = "0.3"

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
g2poly = { version = "0.1.0", path = "./g2poly"}
