[package]
name = "g2gen"
version = "0.2.1"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
edition = "2018"
readme = "./README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/WanzenBug/g2p"
documentation = "https://docs.rs/g2p"
description = """
A macro to create types that implement fast finite field arithmetic.
"""
categories = [ "no-std", "algorithms" ]
keywords = [ "finite-field", "galois", "macro", "newtype"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["parsing"] }
quote = "0.6"
proc-macro2 = "0.4"
g2poly = { version = "0.2.0", path = "../g2poly" }
