[package]
name = "g2gen"
version = "0.4.0"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
edition = "2018"
readme = "./README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/WanzenBug/g2p"
documentation = "https://docs.rs/g2p"
description = """
A macro to create types that implement fast finite field arithmetic.
"""
categories = [ "no-std", "algorithms" ]
keywords = [ "finite-field", "galois", "macro", "newtype"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
g2poly = { path = "../g2poly", version = "0.4" }
