[package]
name = "g2poly"
version = "1.2.1"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
edition = "2018"
readme = "./README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/WanzenBug/g2p"
documentation = "https://docs.rs/g2poly"
description = """
Primitive implementation of polynomials over the field GF(2)
"""
categories = [ "no-std", "algorithms" ]
keywords = [ "finite-field", "galois"]
rust-version = "1.60"

[lib]
path = "src/lib.rs"
